correción de ruta

--- a/Templates/pruebaBusqueda.html
+++ b/Templates/pruebaBusqueda.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejecutor de Métodos String</title>
-    <link rel="stylesheet" href="./Ejemplo.css">
+    <link rel="stylesheet" href="../Statics/styles/pruebaBusqueda.css">
 </head>
 <body>
     <h1>Ejecutor de Métodos String</h1>
@@ -18,5 +18,5 @@
         <div class="result-pantalla" id="result-autor"> </div>
         <div class="result-pantalla" id="result-album"> </div>
     </div>
-    <script src="./buscar_palabra.js"></script>
+    <script src="../Dynamics/js/buscador.js"></script>
 </body>
