--- a/Templates/principal.html
+++ b/Templates/principal.html
@@ -15,7 +15,7 @@
             align-self: center;
         }
         body{
-            background-color: blue;
+            background: radial-gradient(circle, rgba(32,114,169,1) 0%, rgba(38,26,71,1) 100%)
         }
         #busqueda::placeholder{
             color: rgb(0, 0, 0);
@@ -70,7 +70,7 @@
 </head>
 <body>
     <nav id="barraBusqueda"><input type="text" for="busqueda" id="busqueda" placeholder="Busca algo :D"></nav>
-    
+    <div ></div>
     <aside id="menu"> 
         <div id="hamburguesas" class="menu">
             <div id="hamburguesa" class="hamburguesa">
@@ -79,6 +79,7 @@
             <span></span>
             </div>
         </div>
+        <h2>Artistas</h2>
     </aside>
     <script>
         let hamburguesas = document.getElementById("hamburguesa")
