--- a/Templates/vistainicial.html
+++ b/Templates/vistainicial.html
@@ -13,7 +13,15 @@
     
     <div class="contenedorGrandote">
         <div class="debajoDelBuscador">
-            <div class="menu"><!--contenedor para la Barra del menú--></div>
+            <div class="menu"><!--contenedor para la Barra del menú-->
+                <div id="hamburguesas" class="menu">
+                    <div id="hamburguesa" class="hamburguesa">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+            </div>
             <div class="seccionIzquierda">  
                 <div class="reproductorMusica">Reproductor de música</div><!--Aquí poner el reproductor de música-->  
                 <br>
