--- a/Statics/styles/vistainicial.css
+++ b/Statics/styles/vistainicial.css
@@ -20,15 +20,16 @@ body{
     align-content: center;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 .buscador{
     display: flex;
-    height: 40px;
-    width: 95%;
+    height: 30px;
+    width: 70%;
     background-color: white;
     border-radius: 51px;
     text-align: left;
-    margin-top: 10px;
+    font-size: 20px;
 }
 .buscador::placeholder{
             color: rgb(0, 0, 0);
@@ -42,9 +43,12 @@ body{
     background-color: white;
     align-self: center;
     justify-self: left;
-    border-radius: 51px;
+    border-radius: 50px;
     margin-left: 15px;
     justify-content: center;
+    position: relative;
+    padding: 5px;
+    top: 0;
 }
 .debajoDelBuscador{
     width: 100%;
@@ -243,23 +247,80 @@ body{
   color:#eeeeee;
 }
 .hamburguesa{
-  width: 20px;
-  height: 8px;
+  width: 30px;
+  height: 12px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   cursor: pointer;
-  top: 0;
+  top: 10px;
   margin: 0;
   margin-left: 0;
+
 }
 .hamburguesa span{
   display: block;
-  height: 1.5px;
+  height: 2px;
   background-color: black;
   border: radius  2px;
   margin-left: 0;
 }
 #hamburguesas{
+  margin-left: 0;
+  margin-top: 10px;
+}
+.menu-desplegable {
+  position: absolute;
+  left: -300px; 
+  width: 240px;
+  height: 100%;
+  background-color: #2c3e50;
+  color: white;
+  transition: left 0.3s ease;
+  z-index: 999;
+  border-radius: 20px;
+  margin-top: 1;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  gap: 1em
+}
+.menu-desplegable.abierto {
+  left: 60px; /* Se mueve para dejar ver la barra blanca */
+}
+.hamburguesa {
+  font-size: 24px;
+  background: none;
+  border: none;
+  cursor: pointer;
   margin: 0;
+}
+.menu-item {
+  display: flex;
+  align-items: center;
+  padding: 30px 40px;
+  color: white;
+  cursor: pointer;
+  transition: background 0.2s ease;
+  flex-direction: column;
+  font-size: 25px;
+  top: 10px;
+}
+.logoTuneSix{
+  height: 50px;
+  width: 60px;
+  cursor: pointer;
+  position: absolute;
+  right: 10px;
+  top: 2px;
+}
+#resultadosBusqueda {
+  position: absolute;
+  top: 100%; /* justo debajo del input */
+  width: 80%;
+  background: white;
+}
+.result-pantalla {
+    font-family: 'Courier New', monospace;
+    color: black
 }
