Reproductor en base al buscador

--- a/Templates/vistainicial.html
+++ b/Templates/vistainicial.html
@@ -47,7 +47,17 @@
                 </div> 
             </div>
             <div class="seccionIzquierda">  
-                <div class="reproductorMusica">Reproductor de música</div><!--Aquí poner el reproductor de música-->  
+                <div class="reproductorMusica">
+                    <div id="player"></div>
+                    <div class="controls-bar">
+                        <input type="range" name="" id="seekBar">
+                        <i id="playPauseBtn"><i class="fas fa-play"></i></i>
+                        <div id="volumen">
+                            <button type="text" id="muteBtn"></button> 
+                        <input type="range" max="100"  id="volumeSlider">
+                        </div> 
+                    </div>
+                </div><!--Aquí poner el reproductor de música-->  
                 <br>
                 <div class="cuadroMixes"> <!--contenedor que incluye las tres recomendaciones principales-->
                     <button class="botonesMix botonesAnim" id="">Mix</button><br>
@@ -105,8 +115,8 @@
             </div>
         </div>
     </div>
-
+    <script src="https://www.youtube.com/iframe_api"></script>
     <script src="../Dynamics/js/vistainicial.js"></script>
-    <script src="../Dynamics/js/buscador.js"></script>
+    <script src="../Dynamics/js/reproductor.js"></script>
 </body>
 </html>
