--- a/Statics/styles/vistainicial.css
+++ b/Statics/styles/vistainicial.css
@@ -324,3 +324,28 @@ body{
     font-family: 'Courier New', monospace;
     color: black
 }
+#player{
+  width: 70%;
+  height: 200px;
+  border-radius: 30px;
+}
+#playPauseBtn{
+    color: white;
+    cursor: pointer;
+}
+.controls-bar{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#seekBar{
+  width: 80%;
+  accent-color: #eeeeee;
+}
+#volumen{
+  display: flex;
+}
+#volumeSlider{
+  width: 100%;
+  accent-color: #eeeeee;
+}
