avance de cambio de vista en vista inicial

--- a/Templates/vistaDeAlbumes.html
+++ b/Templates/vistaDeAlbumes.html
@@ -11,13 +11,14 @@
     <header>
       <input type="text" placeholder="Busca algo :D" class="buscador">
       <img src="" alt="logo" class="logo">
+      <div class="menu"></div>
     </header>
 
     <main>
       <h1 class="titulo">Artista</h1>
       <div class="contenido">
-        <div class="albumes">
-          <button class="album sobresalir">
+        <div class="albumes" id="contenedor-albumes">
+          <!--<button class="album sobresalir">
             <img src="" alt="nombre1">
             <p>Álbum</p>
           </button>
@@ -32,7 +33,7 @@
           <button class="album sobresalir">
             <img src="" alt="nombre4">
             <p>Álbum</p>
-          </button>
+          </button>-->
         </div>
         <div class="reproductor">
           <!--<div class="controles">
@@ -45,6 +46,6 @@
     </main>
   </div>
 
-  <script src="../Dynamics/js/vistaDeÁlbumes.js"></script>
+  <script src="../Dynamics/js/vistaDeAlbumes.js"></script>
 </body>
 </html>
