--- a/Statics/styles/vistainicial.css
+++ b/Statics/styles/vistainicial.css
@@ -60,12 +60,13 @@ body{
     display: flex;
     width: 40%;
     height: 90%;
-    justify-content: center;
+    /*justify-content: center;*/
     flex-direction: column;
     gap: 20px;
-    align-self: center;
+    /*align-self: center;*/
     margin-left: 50px;
     margin-right: 20px;
+    margin-top: 25px;
 }
 .reproductorMusica{
     width: 100%;
