--- a/Templates/inicioSesion.html
+++ b/Templates/inicioSesion.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="..\Statics\Styles\InicioCss.css">
+    <link rel="stylesheet" href="..\Statics\styles\inicioCss.css">
 </head>
 <body>
     <div id="vistaInicioSesion">
         <div id="imgForm" class="activo">
-            <img src="../Statics/styles/inicioCss.css" id="imgInicioSesion">
+            <img src="../Statics\media\imgs\usuarioInicioSesion.png" id="imgInicioSesion">
             <div id="incioSesion">
                 <p> </p>
                 <br>
@@ -43,27 +43,27 @@
             <div class="opciones">
             <div class="opcion">
                 <input type="radio" id="guepardo" name="fotoPerfil" value="guepardo">
-                <label for="guepardo"><img src="guepardo.jpg" alt="Guepardo"></label>
+                <label for="guepardo"><img src="../Statics\media\imgs\guepardo.jpg" alt="Guepardo"></label>
             </div>
             <div class="opcion">
                 <input type="radio" id="conejo" name="fotoPerfil" value="conejo">
-                <label for="conejo"><img src="conejo.jpg" alt="Conejo"></label>
+                <label for="conejo"><img src="../Statics\media\imgs\conejo.jpg" alt="Conejo"></label>
             </div>
             <div class="opcion">
                 <input type="radio" id="tortuga" name="fotoPerfil" value="tortuga">
-                <label for="tortuga"><img src="tortuga.jpg" alt="Tortuga"></label>
+                <label for="tortuga"><img src="../Statics\media\imgs\tortuga.jpg" alt="Tortuga"></label>
             </div>
             <div class="opcion">
                 <input type="radio" id="gato" name="fotoPerfil" value="gato">
-                <label for="gato"><img src="gato.jpg" alt="Gato"></label>
+                <label for="gato"><img src="../Statics\media\imgs\gato.jpg" alt="Gato"></label>
             </div>
             <div class="opcion">
                 <input type="radio" id="ajolote" name="fotoPerfil" value="ajolote">
-                <label for="ajolote"><img src="ajolote.jpg" alt="Ajolote"></label>
+                <label for="ajolote"><img src="../Statics\media\imgs\ajolote.jpg" alt="Ajolote"></label>
             </div>
             <div class="opcion">
                 <input type="radio" id="huron" name="fotoPerfil" value="huron">
-                <label for="huron"><img src="huron.jpg" alt="Hurón"></label>
+                <label for="huron"><img src="../Statics\media\imgs\huron.jpg" alt="Hurón"></label>
             </div>
             </div>
 
@@ -71,27 +71,27 @@
             <div class="opciones">
             <div class="opcion">
                 <input type="radio" id="p1" name="fotoPortada" value="p1">
-                <label for="p1"><img src="p1.jpg" alt="Portada 1"></label>
+                <label for="p1"><img src="../Statics\media\imgs\p1.jpg" alt="Portada 1"></label>
             </div>
             <div class="opcion">
                 <input type="radio" id="p2" name="fotoPortada" value="p2">
-                <label for="p2"><img src="p2.jpg" alt="Portada 2"></label>
+                <label for="p2"><img src="../Statics\media\imgs\p2.jpg" alt="Portada 2"></label>
             </div>
             <div class="opcion">
                 <input type="radio" id="p3" name="fotoPortada" value="p3">
-                <label for="p3"><img src="p3.jpg" alt="Portada 3"></label>
+                <label for="p3"><img src="../Statics\media\imgs\p3.jpg" alt="Portada 3"></label>
             </div>
             <div class="opcion">
                 <input type="radio" id="p4" name="fotoPortada" value="p4">
-                <label for="p4"><img src="p4.jpg" alt="Portada 4"></label>
+                <label for="p4"><img src="../Statics\media\imgs\p4.jpg" alt="Portada 4"></label>
             </div>
             <div class="opcion">
                 <input type="radio" id="p5" name="fotoPortada" value="p5">
-                <label for="p5"><img src="p5.jpg" alt="Portada 5"></label>
+                <label for="p5"><img src="../Statics\media\imgs\p5.jpg" alt="Portada 5"></label>
             </div>
             <div class="opcion">
                 <input type="radio" id="p6" name="fotoPortada" value="p6">
-                <label for="p6"><img src="p6.jpg" alt="Portada 6"></label>
+                <label for="p6"><img src="../Statics\media\imgs\p6.jpg" alt="Portada 6"></label>
             </div>
             </div>
             <button type="submit" id="crearUsuarioBtn" class="botonesISR">Crear cuenta</button>
