--- a/Statics/styles/vistainicial.css
+++ b/Statics/styles/vistainicial.css
@@ -113,7 +113,7 @@ body{
 .centrar{
     text-align: center;
 }
-.seccionDerecha{
+#seccionDerecha{
     width: 100%;
     height: 100%;
     display: flex;
